--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,7 @@ github_username:  abiaog
 
 # Build settings
 markdown: kramdown
+
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-hacker
